# ifcg

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
cmake/: Dependencies.cmake
docs/27_02/: diagrama_vao_vbo_ebo.planttext
include/: ebo.hpp  ifcg.hpp  mesh.hpp  mesh.hpp.old  mesh2D.hpp  shader.hpp  squareMesh2D.hpp  triangleMesh2D.hpp  vao.hpp  vbo.hpp  vertex2D.hpp
include/2D/: camera2D.hpp  circle_mesh2D.hpp  mesh2D.hpp  squareMesh2D.hpp  square_mesh2D.hpp  triangleMesh2D.hpp  triangle_mesh2D.hpp  vertex2D.hpp
include/3D/: camera3D.hpp  cubeMesh3D.hpp  cube_mesh3D.hpp  mesh3D.hpp  pyramidMesh3D.hpp  pyramid_mesh3D.hpp  sphere_mesh3D.hpp  vertex3D.hpp
include/editor/: instance.hpp
include/glad/: glad.h
include/ifcg/: ifcg.hpp
include/ifcg/common/: camera.hpp  cameraBase.hpp  mesh.hpp  meshBase.hpp  vertex.hpp
include/ifcg/components/: context.hpp  error.hpp  keys.hpp  renderer.hpp  window.hpp
include/ifcg/graphics/: mesh.hpp  meshTree.hpp
include/ifcg/graphics/primitives/: circle.hpp  cube.hpp  pyramid.hpp  sphere.hpp  square.hpp  triangle.hpp
include/ifcg/graphics/view/: camera.hpp  camera2D.hpp  camera3D.hpp
include/ifcg/graphics2D/geometry/: circle.hpp  mesh.hpp  square.hpp  triangle.hpp
include/ifcg/graphics2D/scene/: camera.hpp
include/ifcg/graphics3D/geometry/: cube.hpp  mesh.hpp  meshTree.hpp  pyramid.hpp  sphere.hpp
include/ifcg/graphics3D/scene/: camera.hpp
include/ifcg/shader/: ebo.hpp  shader.hpp  vao.hpp  vbo.hpp
include/shader/: ebo.hpp  shader.hpp  vao.hpp  vbo.hpp
resources/shaders/: default.vert  default2D.vert  default2D_vert.glsl  default3D.vert  default3D_vert.glsl  default_vert.glsl
src/: CMakeLists.txt  ebo.cpp  ifcg.cpp  main.cpp  mesh.cpp  mesh.cpp.old  shader.cpp  vao.cpp  vbo.cpp
src/glad/: glad.c
src/ifcg/: ifcg.cpp
src/ifcg/common/: meshBase.cpp
src/ifcg/components/: context.cpp  keys.cpp  renderer.cpp  window.cpp
src/ifcg/graphics/: mesh.cpp  meshTree.cpp
src/ifcg/graphics/primitives/: circle.cpp  cube.cpp  pyramid.cpp  sphere.cpp  square.cpp  triangle.cpp
src/ifcg/graphics/view/: camera.cpp  camera2D.cpp  camera3D.cpp
src/ifcg/graphics2D/geometry/: circle.cpp  mesh.cpp  square.cpp  triangle.cpp
src/ifcg/graphics2D/scene/: camera.cpp
src/ifcg/graphics3D/geometry/: cube.cpp  mesh.cpp  meshTree.cpp  pyramid.cpp  sphere.cpp
src/ifcg/graphics3D/scene/: camera.cpp
src/ifcg/shader/: ebo.cpp  shader.cpp  vao.cpp  vbo.cpp
tests/: CMakeLists.txt  main.cpp  main.cpp.old  test2D.cpp  test3D.cpp
